--- a/win/iOS/NetHack/Resources/MainStoryboard.storyboard
+++ b/win/iOS/NetHack/Resources/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="1938" systemVersion="11C74" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="96c-pw-Qfk">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="1938" systemVersion="11D50" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="96c-pw-Qfk">
     <dependencies>
         <development defaultVersion="4200" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="933"/>
@@ -52,9 +52,7 @@
                         <outlet property="statusLine1" destination="cR9-Fn-sgQ" id="oKc-hn-lyH"/>
                         <outlet property="statusLine2" destination="NU5-cc-QD7" id="FSM-gz-rrf"/>
                         <outlet property="view" destination="t8A-Ab-rea" id="Q3F-HF-ILe"/>
-                        <segue destination="nTB-e4-MPM" kind="popover" identifier="TextMenuSegue" id="qT0-ah-LF5">
-                            <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                        </segue>
+                        <segue destination="nTB-e4-MPM" kind="modal" identifier="TextMenu" modalPresentationStyle="formSheet" id="qT0-ah-LF5"/>
                     </connections>
                 </viewController>
             </objects>
@@ -63,25 +61,40 @@
         <scene sceneID="QJj-Zd-hDg">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6LK-7g-t6C" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="nTB-e4-MPM" customClass="TextMenuController" sceneMemberID="viewController">
+                <viewController id="nTB-e4-MPM" customClass="TextMenuViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yKf-wq-Twg">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <rect key="frame" x="0.0" y="0.0" width="540" height="620"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" id="UmG-RA-Cki">
-                                <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                                <rect key="frame" x="0.0" y="48" width="540" height="572"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="Courier" family="Courier" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="n9v-J8-J19">
+                                <rect key="frame" x="451" y="2" width="70" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" size="button"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="done:" destination="nTB-e4-MPM" eventType="touchUpInside" id="uUn-dj-vSV"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
                     <connections>
-                        <outlet property="textView" destination="UmG-RA-Cki" id="myW-zl-ltL"/>
+                        <outlet property="textView" destination="UmG-RA-Cki" id="H1l-vN-Yzd"/>
                     </connections>
                 </viewController>
             </objects>
@@ -101,8 +114,8 @@
         <class className="MapView" superclassName="UIView">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MapView.h"/>
         </class>
-        <class className="TextMenuController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TextMenuController.h"/>
+        <class className="TextMenuViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TextMenuViewController.h"/>
             <relationships>
                 <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
             </relationships>
